<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".CurrencyConverterActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/conversion_header_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/conversion_header"
            android:textColor="@color/black"
            android:textSize="@dimen/big_text_size" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/conversion_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="12dp"
            android:text="@string/conversion_prompt_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <EditText
            android:id="@+id/conversion_et"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginEnd="8dp"
            android:ems="10"
            android:hint="@string/conversion_hint"
            android:inputType="numberDecimal"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/conversion_result_label"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size" />

        <TextView
            android:id="@+id/conversion_result_tv"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:text="@string/conversion_default_result_value"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            tools:ignore="TouchTargetSizeCheck" />

    </LinearLayout>

</LinearLayout>